# c-app

./: .gitignore  Kconfig  README.md  meson.build  meson.options  requirements.txt
src/: main.c  meson.build
subprojects/: kconfig.wrap  package-metadata.wrap  sentry.wrap  shield.wrap
